# Ruzino-Homework

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  configure.py
.github/workflows/: build.yml
cmake/: AddNodes.cmake  FindAgilitySDK.cmake
doc/: shader_cache_usage.md
prompts/: test_instructions.md
scripts/: clang_format_manager.ps1  clang_format_manager.py  format_and_commit_manager.py
source/Core/: CMakeLists.txt
source/Core/RHI/: CMakeLists.txt
source/Core/RHI/include/RHI/DeviceManager/: DeviceManager.h
source/Core/RHI/include/RHI/Hgi/: format_conversion.hpp
source/Core/RHI/include/RHI/ResourceManager/: resource_allocator.hpp
source/Core/RHI/include/RHI/ShaderFactory/: shader.hpp
source/Core/RHI/include/RHI/internal/: nvrhi_sizes.hpp  resources.hpp
source/Core/RHI/source/: DeviceManager_VK.cpp  rhi.cpp  shader.cpp  shaderCompiler.cpp  shader_reflection.cpp
source/Core/RHI/tests/: cuda_eigen.cu
source/Core/Solver/: CMakeLists.txt
source/Core/rzfembem/: CMakeLists.txt
source/Core/rzfembem/include/fem_bem/: ElementBasis.hpp  ElementBasis.inl  Expression.hpp  fem_bem.hpp
source/Core/rzfembem/nodes/: CMakeLists.txt  bem_solver.cpp  dirichlet_bc.cpp  fem_solver.cpp  linear_solvers.cpp  neumann_bc.cpp  robin_bc.cpp
source/Core/rzfembem/source/: Expression.cpp  rzfembem.cpp
source/Core/rzfembem/tests/: expression.cpp  fem_bem_problem.cpp  numerical_integral.cpp
source/Editor/: CMakeLists.txt
source/Editor/GUI/: CMakeLists.txt
source/Editor/GUI/include/GUI/: ImGuizmo.h  text_editor_widget.hpp  widget.h  window.h
source/Editor/GUI/python/: CMakeLists.txt
source/Editor/GUI/source/: ImGuizmo.cpp  imgui_nvrhi.cpp  imgui_nvrhi.h  text_editor_widget_wrapper.cpp  window.cpp
source/Editor/GUI/tests/: GUI.cpp
source/Editor/geometry/: InstancerComponent.cpp  MaterialComponent.cpp  MeshOperand.cpp  util_openmesh_bind.cpp
source/Editor/geometry/algorithms/: intersection.cpp
source/Editor/geometry/algorithms/CS/: intersection.slang  pointsamples.slang
source/Editor/geometry/include/GCore/: Components.h  GOP.h  geom_payload.hpp
source/Editor/geometry/include/GCore/Components/: CurveComponent.h  InstancerComponent.h  MaterialComponent.h  MeshOperand.h
source/Editor/geometry/include/GCore/algorithms/: intersection.h
source/Editor/geometry_nodes/: CMakeLists.txt  GPU_sph.cpp  geom_prop_convert.cpp  hw5_boundary_map.cpp  hw5_param.cpp  hw5_parameterization_metrics.cpp  hw6_arap.cpp  hw6_asap.cpp  hw6_hybrid.cpp  hw6_parameterization_metrics.cpp  instance_on_points.cpp  node_colormap.cpp  node_create_geom.cpp  node_curvature.cpp  node_curve_to_mesh.cpp  node_fill_hole.cpp  node_geom_add_point.cpp  node_geom_distances.cpp  node_get_current_usd_path.cpp  node_mesh_compose.cpp  node_mesh_decompose.cpp  node_mvc.cpp  node_points_to_mesh.cpp  node_print_debug_info.cpp  node_random_uv_points.cpp  node_read_obj.cpp  node_read_usd.cpp  node_set_texture.cpp  node_set_value.cpp  node_set_vert_color.cpp  node_tetgen.cpp  node_transform_geom.cpp  node_write_usd.cpp  random_points.cpp  set_material.cpp  test_input.cpp
source/Editor/geometry_nodes/mesh2SDF/: mesh2sdf.cpp  sdf2mesh.cpp  upsample.cpp
source/Editor/material/: CMakeLists.txt
source/Editor/material/include/MCore/: Graph.h  MaterialXDocumentViewer.hpp  MaterialXNodeTree.hpp  MaterialXNodeTreeWidget.h  api.h
source/Editor/material/source/: Graph.cpp  MaterialXDocumentViewer.cpp  MaterialXNodeTree.cpp  MaterialXNodeTree.hpp  MaterialXNodeTreeWidget.cpp  foo_socket_types.inl
source/Editor/material/tests/: mtlx_editor.cpp
source/Editor/rzconsole/include/rzconsole/: ConsoleObjects.h  api.h  imgui_console.h
source/Editor/rzconsole/source/: ConsoleInterpreter.cpp  ConsoleObjects.cpp  imgui_console.cpp
source/Editor/rzpython/include/rzpython/: api.h  rzpython.hpp  rzpython_impl.hpp
source/Editor/rzpython/source/: interpreter.cpp  rzpython.cpp
source/Editor/rzpython/tests/: rzpython_console.cpp
source/Editor/simulation_nodes/: projective_dynamics.cpp
source/Plugins/: CMakeLists.txt
source/Plugins/BPM/: README.md
source/Plugins/TreeGen/: CMakeLists.txt
source/Plugins/hd_RUZINO_Embree/: integrator.cpp  integrator.h  (+3 more)
source/Plugins/hd_USTC_CG_Embree/: CMakeLists.txt  api.h  camera.cpp  camera.h  color.h  config.h  context.h  instancer.h  integrator.cpp  integrator.h  light.cpp  light.h  material.cpp  material.h  renderBuffer.h  renderDelegate.cpp  renderParam.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h  sampler.cpp  surfaceInteraction.h  texture.cpp  texture.h
source/Plugins/hd_USTC_CG_Embree/embree4/: CMakeLists.txt
source/Plugins/hd_USTC_CG_Embree/geometries/: mesh.cpp  mesh.h  meshSamplers.h
source/Plugins/hd_USTC_CG_Embree/integrators/: ao.cpp  ao.h  direct.cpp  direct.h  path.cpp  path.h
source/Plugins/hd_USTC_CG_Embree/resources/: plugInfo.json
source/Plugins/hd_USTC_CG_Embree/utils/: math.hpp  sampling.hpp
source/Plugins/hd_USTC_CG_GL/: CMakeLists.txt  api.h  camera.cpp  camera.h  config.h  global_payload_gl.hpp  instancer.h  light.cpp  light.h  material.cpp  material.h  node_exec_eager_render.cpp  node_exec_eager_render.hpp  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderer.cpp  renderer.h  rendererPlugin.h  sampler.cpp
source/Plugins/hd_USTC_CG_GL/geometries/: mesh.cpp  mesh.h
source/Plugins/hd_USTC_CG_GL/include/GL/: GLResources.hpp  resources.hpp  shader.hpp
source/Plugins/hd_USTC_CG_GL/internal/gl/: GLResources.cpp  shader.cpp
source/Plugins/hd_USTC_CG_GL/nodes/: node_render_deferred_lighting_gl.cpp  node_render_present_gl.cpp  node_render_rasterize_gl.cpp  node_render_shadow_mapping_gl.cpp  node_render_transparent_refraction_gl.cpp
source/Plugins/hd_USTC_CG_GL/nodes/utils/: draw_fullscreen.h
source/Plugins/hd_USTC_CG_GL/resources/: plugInfo.json
tests/application/: CMakeLists.txt  Ruzino.cpp  USTC_CG.cpp  USTC_CG_polyscope.cpp  headless_geom_node_executor.cpp  headless_render.cpp  node_editor.cpp  profile_and_validate.py  render_util.hpp  rz_render.cpp
(+230 files in other folders)
